--- a/web/templates/registration/register.html
+++ b/web/templates/registration/register.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load form_tags %}
 {% block title %}PROTOTIPO - Registro{% endblock %}
 {% block content %}
 <div class="container my-5">
@@ -21,19 +22,55 @@
                                 </ul>
                             </div>
                         {% endif %}
-                        {% for field in form %}
+                        
                         <div class="mb-3 row">
-                            <label for="{{ field.id_for_label }}" class="col-sm-5 col-form-label">{{ field.label }}</label>
+                            <label for="{{ form.username.id_for_label }}" class="col-sm-5 col-form-label">{{ form.username.label }}</label>
                             <div class="col-sm-7">
-                                {{ field }}
-                                {% if field.errors %}
+                                {{ form.username|add_class:"form-control" }}
+                                {% if form.username.errors %}
                                 <div class="text-danger">
-                                    {{ field.errors }}
+                                    {{ form.username.errors }}
                                 </div>
                                 {% endif %}
                             </div>
                         </div>
-                        {% endfor %}
+
+                        <div class="mb-3 row">
+                            <label for="{{ form.email.id_for_label }}" class="col-sm-5 col-form-label">{{ form.email.label }}</label>
+                            <div class="col-sm-7">
+                                {{ form.email|add_class:"form-control" }}
+                                {% if form.email.errors %}
+                                <div class="text-danger">
+                                    {{ form.email.errors }}
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="mb-3 row">
+                            <label for="{{ form.password1.id_for_label }}" class="col-sm-5 col-form-label">{{ form.password1.label }}</label>
+                            <div class="col-sm-7">
+                                {{ form.password1|add_class:"form-control" }}
+                                {% if form.password1.errors %}
+                                <div class="text-danger">
+                                    {{ form.password1.errors }}
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+
+                        <div class="mb-3 row">
+                            <label for="{{ form.password2.id_for_label }}" class="col-sm-5 col-form-label">{{ form.password2.label }}</label>
+                            <div class="col-sm-7">
+                                {{ form.password2|add_class:"form-control" }}
+                                {% if form.password2.errors %}
+                                <div class="text-danger">
+                                    {{ form.password2.errors }}
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+
                         <button type="submit" class="btn btn-primary w-100 my-5">Registrar</button>
                     </form>
                 </div>
