--- a/web/templates/extra_list.html
+++ b/web/templates/extra_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load form_tags %}
 {% block title %}PROTOTIPO - Extras{% endblock %}
 {% block content %}
 <div class="container my-5">
@@ -30,17 +31,41 @@
             </table>
         </div>
 
-        <div class="col-md-4 card">
-            <div class="card-title"><h2>Agregar Nuevo Extra</h2>
+        <div class="col-md-4 card shadow-sm">
+            <div class="card-title text-center mt-3"><h2>Agregar Nuevo Extra</h2></div>
             <div class="card-body">
-                <form action="{% url 'add_extra' %}" method="post">
+                <form action="{% url 'add_extra' %}" method="post" class="mx-auto" style="max-width: 400px;">
                     {% csrf_token %}
-                    {{ add_extra_form.as_p }}
-                    <button type="submit" class="btn btn-success">Agregar Extra</button>
+                    {% if add_extra_form.errors %}
+                        <div class="alert alert-danger" role="alert">
+                            <strong>Por favor corrige los siguientes errores:</strong>
+                            <ul>
+                                {% for field in add_extra_form %}
+                                {% for error in field.errors %}
+                                <li>{{ error }}</li>
+                                {% endfor %}
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    {% endif %}
+                    
+                    {% for field in add_extra_form %}
+                    <div class="mb-3 row">
+                        <label for="{{ field.id_for_label }}" class="col-sm-5 col-form-label">{{ field.label }}</label>
+                        <div class="col-sm-7">
+                            {{ field|add_class:"form-control" }}
+                            {% if field.errors %}
+                            <div class="text-danger">
+                                {{ field.errors }}
+                            </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                    {% endfor %}
+                    
+                    <button type="submit" class="btn btn-success w-100 mt-4">Agregar Extra</button>
                 </form>
             </div>
         </div>
-    </div>
-</div>
-
+        
 {% endblock %}
